tests/paczka1/small_fuzzy/28230008.err
Error in line 2: UMnnpitBvuM S894 18,5
Error in line 3: UMnnpitBvuM A786 57,6
Error in line 5: UMnnpitBvuM S670 81,9
Error in line 11: z0zE5la1 S850 99,2
